--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </div>
 </a>
 
-<a href="https://goosmeister.github.io/3-column-preview/" target="_blank">
+<a href="https://goosmeister.github.io/FEMentorProfileCard.github.io/" target="_blank">
 <div class="flex-column" id="left">
   <div class="wrap wrap--2" id="card2">
     <div class="container " id="container--7">
@@ -175,12 +175,15 @@
 </div>
 </a>
 
-<div class="flex-column" id="right">
-<div class="wrap wrap--1" id="card1">
-  <div class="container " id="container--9" >
-    <p class="card">Coming Soon</p>
+  <div class="flex-column" id="right">
+    <a class="project-a" href="https://goosmeister.github.io/FrontendMentorStatsPreviewCard.github.io/" target="_blank">
+  <div class="wrap wrap--1" id="card1">
+    <div class="container" id="container--9">
+      <p class="card">Landing Page</p>
+    </div>
   </div>
-</div>
+  
+</a>
 </div>
 </section>
 </article>
