--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
+<div class="mobile" id="mobile">
+  <p>This websight is intended to be viewed on a PC. The Mobile version is stil in developement.
+    </p>
+    <button id="continue" onclick="mobileAlert()">Continue?</button>
+  </div>
 
 
     <head>
@@ -179,7 +183,7 @@
     <a class="project-a" href="https://goosmeister.github.io/FrontendMentorStatsPreviewCard.github.io/" target="_blank">
   <div class="wrap wrap--1" id="card1">
     <div class="container" id="container--9">
-      <p class="card">Landing Page</p>
+      <p class="card">Stats Card Frontend Mentor</p>
     </div>
   </div>
   
