--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<div class="mobile" id="mobile">
+<div class="mobile" id="mobile" style="display: flex;">
   <p>This websight is intended to be viewed on a PC. The Mobile version is stil in developement.
     </p>
     <button id="continue" onclick="mobileAlert()">Continue?</button>
