--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- mobile msg-->
 <div class="mobile" id="mobile" style="display: flex;">
   <p>This websight is intended to be viewed on a PC. The Mobile version is stil in developement.
     </p>
     <button id="continue" onclick="mobileAlert()">Continue?</button>
   </div>
 
+
+
+<!--main doc-->
 
     <head>
         <link rel="stylesheet" href="Styles/menustyles.css">
@@ -16,6 +20,7 @@
         <link rel="stylesheet" href="Styles/cards.css">
         <link rel="stylesheet" href="Styles/MediaSizing.css">
         <link rel="stylesheet" href="Styles/burgerMenu.css">
+        <link rel="stylesheet" href="Styles/load.css">
         <script src="script/script.js"></script> 
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -30,6 +35,19 @@
     <canvas class="backg"></canvas>
 <body>
 
+  <!--Loader-->
+
+<div class="loader-container" id="preloader">
+  <div class="loader"></div>
+</div>
+
+<script>
+var loader = document.getElementById("preloader");
+
+window.addEventListener("load", function(){
+  loader.style.display = "none"
+})
+</script>
   
     <header>
 
