--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <!-- mobile msg-->
-<div class="mobile" id="mobile" style="display: flex;">
+<div class="mobile" id="mobile" style="display: none;">
   <p>This websight is intended to be viewed on a PC. The Mobile version is stil in developement.
     </p>
     <button id="continue" onclick="mobileAlert()">Continue?</button>
