--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   <!--Loader-->
 
 <div class="loader-container" id="preloader">
+  
   <div class="loader"></div>
+  <h1>LOADING</h1>
 </div>
 
 <script>
@@ -48,7 +50,7 @@ window.addEventListener("load", function(){
   loader.style.display = "none"
 })
 </script>
-  
+
     <header>
 
       <div class = "topnav">
