--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="HandheldFriendly" content="true">
         <meta charset="UTF-8">
-        <meta name="description" content="Gustav Kozte Portofolio">
+        <meta name="description" content="Gustav Kotze Portofolio">
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="Gustav Kotze">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +55,11 @@ window.addEventListener("load", function(){
     <header>
 
       <div class = "topnav">
+
+
+
         <nav>
+         
           <ul class="nav__links">
 <!--burger menu-->
 <input type="checkbox" checked="checked" id="toggle" class="burgerMenu" onclick="openMenu()">
@@ -75,6 +79,7 @@ window.addEventListener("load", function(){
 <!--desktop navbar-->
 
 <div id="menu-window" class = "menu-window">
+                <li id="lil"><div class="lil-planet"></div></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#me">Me</a></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#projects">Projects</a></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#contacts">Contact</a></li>
