--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
 </div>
 
-<div id="welcome"><h1>Welcome</h1></div>
+<div id="welcome" style="display: none;"><h1>Welcome</h1></div>
 
 <script>
 var loader = document.getElementById("preloader");
