--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div id="menu-window" class = "menu-window">
                 <li id="lil"><div class="lil-planet"></div></li>
-                <li><a onclick="closeMenu()" class = "menu-links" href="#me">Me</a></li>
+                <li><a onclick="closeMenu()" class = "menu-links" href="#me">Restart</a></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#projects">Projects</a></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#contacts">Contact</a></li>
             </ul>
@@ -105,7 +105,7 @@
 
 
 <div class="breakWindow">
-<div class="white-break"></div>
+
 </div>
 
 <div class="fullscreen-div">
@@ -117,9 +117,10 @@
 
 
 </div>
-<div >
 
-</div>
+<div class="breakWindow">
+
+  </div>
 
 <!--cards-->
 
