--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div id="welcome" style="display: none;"></div>
 
 <script src="script/loadScript.js"></script> 
-
+<a name="top"></a>
     <header>
 
       <div class = "topnav">
@@ -76,7 +76,7 @@
 
 <div id="menu-window" class = "menu-window">
                 <li id="lil"><div class="lil-planet"></div></li>
-                <li><a onclick="closeMenu()" class = "menu-links" href="#me">Restart</a></li>
+                <li><a onclick="closeMenu()" class = "menu-links" href="#top">Restart</a></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#projects">Projects</a></li>
                 <li><a onclick="closeMenu()" class = "menu-links" href="#contacts">Contact</a></li>
             </ul>
@@ -124,7 +124,7 @@
 
 <!--cards-->
 
-<article class="projects-slider__container">
+<article class="projects-slider__container" id ="projects">
 
   
 <section class="main" id ="projects">
