--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <a href="mailto:edgegustavkotze@gmail.com" target="_blank" rel="noopener noreferrer">Email</a>
     <a href="https://www.linkedin.com/in/gustav-kotze-433853137/" target="_blank">LinkedIn</a>
     <a href="https://github.com/Goosmeister" target="_blank">Github</a>
-<p>Hosted On GitHub Pages</p>
+<p>Hosted On GitHub Pages. 2021 © Gustav Kotze</p>
   </div>
 </footer>
 
